Fixed Toggle Button (globally) on Community_CSS_PP_Theme.css; Added dotted underline to links and fixed double border on 3-button Pill

--- a/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
+++ b/force-app/main/default/staticresources/Community_CSS_PP_Theme.css
@@ -2091,20 +2091,20 @@ input:focus + .slds-checkbox__label > .slds-checkbox_faux {
 .slds-checkbox_toggle .slds-checkbox--faux::after,
 .slds-checkbox--toggle .slds-checkbox_faux::after,
 .slds-checkbox--toggle .slds-checkbox--faux::after {
-    width: 1rem;
-    height: 1rem;
-    top: 3.5px;
-    left: 4px;
+    width: 1.25rem;
+    height: 1.25rem;
+    top: 1px;
+    left: 1px;
 }
 .result-type-toggle
     .slds-checkbox_toggle
     [type='checkbox']:checked
     + .slds-checkbox_faux_container
     .slds-checkbox_faux::before {
-    width: 1rem;
-    height: 1rem;
-    top: 3.5px;
-    right: 4px;
+    width: 1.25rem;
+    height: 1.25rem;
+    top: 1px;
+    right: 1px;
 }
 
 element.style {
